--- a/app/src/main/res/drawable/switch_thumb.xml
+++ b/app/src/main/res/drawable/switch_thumb.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:bottom="4dp"
         android:left="4dp"
@@ -10,6 +10,18 @@
             <size
                 android:width="20dp"
                 android:height="20dp" />
+        </shape>
+    </item>
+</layer-list>-->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:top="4dp"
+        android:left="4dp"
+        android:right="4dp"
+        android:bottom="4dp">
+        <shape android:shape="oval" >
+            <size android:height="20dp" android:width="20dp" />
+            <solid android:color="#000000" />
         </shape>
     </item>
 </layer-list>
