--- a/app/src/main/res/layout/fragment_more_options.xml
+++ b/app/src/main/res/layout/fragment_more_options.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <View
+        <!-- <View
             android:id="@+id/separator1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -18,7 +18,7 @@
             android:layout_marginStart="22dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="22dp"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"/> -->
 
         <!-- Contents start here -->
 
@@ -28,6 +28,7 @@
             android:text="@string/options_calc_title"
             android:textColor="?attr/colorPrimary"
             android:textStyle="bold"
+            android:layout_marginTop="12dp"
             android:layout_marginStart="22dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -100,7 +101,6 @@
             android:id="@+id/accuracy_slider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hapticFeedbackEnabled="true"
             android:layout_marginStart="22dp"
             android:layout_marginEnd="22dp"
             android:stepSize="1"
@@ -114,7 +114,7 @@
             android:text="@string/options_misc_title"
             android:textColor="?attr/colorPrimary"
             android:textStyle="bold"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginStart="22dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -163,6 +163,35 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/options_general_title"
+            android:textColor="?attr/colorPrimary"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="22dp"/>
+
+        <TextView
+            android:id="@+id/language_preference_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/language"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="22dp"
+            android:layout_marginEnd="22dp"/>
+
+        <TextView
+            android:id="@+id/language_preference_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/textFillColor"
+            android:textSize="12sp"
+            android:layout_marginEnd="22dp"
+            android:text="@string/language_tip"
+            android:layout_marginStart="22dp"/>
 
     </LinearLayout>
 </ScrollView>
