--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -24,5 +24,6 @@
         <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog.Centered</item>
         <item name="outlinedFillColor">@color/black</item>
         <item name="actionBarIconColor">#c0c7cd</item>
+        <item name="popupMenuStyle">@style/Widget.Material3.PopupMenu</item>
     </style>
 </resources>
