--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -24,6 +24,7 @@
         <item name="textFillColor">#66000000</item>
         <item name="outlinedFillColor">@color/white</item>
         <item name="actionBarIconColor">#2a3836</item>
+        <item name="popupMenuStyle">@style/Widget.Material3.PopupMenu</item>
     </style>
 
     <style name="buttonShape">
