--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,20 +88,20 @@
             android:background="@drawable/button_group_mid_fill"
             app:layout_constraintEnd_toStartOf="@id/cursor_right"
             app:layout_constraintStart_toEndOf="@id/cursor_left"
-            app:layout_constraintBottom_toTopOf="@id/keyboard_grid"
-            android:contentDescription="@string/tip_cursor_right"/>
+            app:layout_constraintBottom_toTopOf="@id/keyboard_grid"/>
 
         <ImageButton
             android:id="@+id/cursor_right"
             android:layout_width="60dp"
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
-            app:layout_constraintTop_toTopOf="@id/calc_button"
-            app:layout_constraintStart_toEndOf="@id/calc_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/calc_button"
+            android:background="@drawable/button_group_right"
             android:src="@drawable/ic_cursor_right"
-            android:background="@drawable/button_group_right"/>
+            app:layout_constraintBottom_toBottomOf="@id/calc_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/calc_button"
+            app:layout_constraintTop_toTopOf="@id/calc_button"
+            android:contentDescription="@string/tip_cursor_right"/>
 
         <GridLayout
             android:id="@+id/keyboard_grid"
